--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,14 +1,6 @@
-<%- include partials/header.ejs %>
-<%- include partials/main_nav.ejs %>
-<!-- Main Content -->
-<main>
-  <div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Welcome to the <%= title %> page</h1>
-  </div>
-</div>
-</main>
-<%- include partials/bottom_nav.ejs %>
-<%- include partials/footer.ejs %>
-
-
+<%- include Partials/header.ejs%>
+<%- include Partials/main_nav.ejs%>
+    <!--Main content-->
+    <h1><%= title %></h1>
+    <p>Welcome to <%= title %></p>
+<%- include Partials/footer.ejs%>
