--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,6 +1,8 @@
-  <!--Script files-->
-  <script src="/Scripts/app.js"></script>
-  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="/jquery/dist/jquery.min.js"></script>
+<!--footer-->
+<footer>
+    <nav class="navbar fixed-bottom navbar-dark bg-dark">
+      <h6 class="navbar-text">&copy; Copyright 2024. All rights reserved</h6>
+    </nav>
+    </footer>
 </body>
 </html>
