--- a/server/views/book/add.ejs
+++ b/server/views/book/add.ejs
@@ -1,62 +1,37 @@
-<%- include ../partials/header.ejs %>
-<%- include ../partials/main_nav.ejs %>
-
-<!-- Content for the Add page -->
+<%- include ../Partials/header.ejs%>
+<%- include ../Partials/main_nav.ejs%>
+<!--Content for Add Page-->
 <div class="container">
     <div class="row">
-        <div class="col-md-offset-3 col-md-6">
+        <div class="offset-md-3 col-md-6">
             <h1><%= title %></h1>
-            <form class="form" method="post">
-
-              <div class="form-group">
-                <label for="nameTextField">Book Title</label>
-                <input type="text" class="form-control"
-                id="nameTextField"
-                placeholder="Enter the Book Title"
-                name="name" required>
-              </div> 
-
-              <div class="form-group">
-                <label for="authorTextField">Author</label>
-                <input type="text" class="form-control"
-                id="authorTextField"
-                placeholder="Enter the Book's Author"
-                name="author" required>
-              </div> 
-
-              <div class="form-group">
-                <label for="publishedTextField">Year</label>
-                <input type="text" class="form-control"
-                id="publishedTextField"
-                placeholder="Enter the Year of Publication"
-                name="published" required>
-              </div> 
-
-              <div class="form-group">
-                <label for="descTextField">Description</label>
-                <textarea type="text" class="form-control"
-                id="descTextField"
-                placeholder="Enter the Description of the Book"
-                name="description" required></textarea>
-              </div> 
-
-              <div class="form-group">
-                <label for="priceTextField">Price</label>
-                <input type="number" class="form-control"
-                id="priceTextField"
-                placeholder="Enter the Price of Book"
-                name="price" required>
-              </div> 
-                <br>
-              <button class="btn-btn-primary" type="submit">
-                <i class="fas fa-edit"></i>Submit</button>
-
-              <a href="/book-list" class="btn btn-warning">
-                <i class="fas fa-undo"></i>Cancel</a>
+            <form class="form" method="POST">
+                <div class="form-group">
+                    <label for="nameTextField">Book Title</label>
+                    <input type="text" class="form-control" id="nameTextField" placeholder="Enter the Book Title" name="Name" required>
+                </div>
+                <div class="form-group">
+                    <label for="authorTextField">Book Author</label>
+                    <input type="text" class="form-control" id="authorTextField" placeholder="Enter the Book Author" name="Author" required>
+                </div>
+                <div class="form-group">
+                    <label for="publishedTextField">Published</label>
+                    <input type="text" class="form-control" id="publishedTextField" placeholder="Enter the Published year" name="Published" required>
+                </div>
+                <div class="form-group">
+                    <label for="descriptionTextArea">Book Description</label>
+                    <textarea type="text" class="form-control" id="descriptionTextArea"  placeholder="enter the Book Description" name="Description" required></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="priceTextField">Price</label>
+                    <input type="text" class="form-control" id="priceTextField" placeholder="Book's Price" name="Price" required>
+                </div>
+                <button class="btn btn-primary" type="submit">Submit
+                <i class="fas fa-edit"></i></button>  
+                <button class="btn btn-warning" type="submit">Cancel
+                    <i class="fas fa-undo"></i></button>    
             </form>
         </div>
     </div>
 </div>
-
-<%- include ../partials/bottom_nav.ejs %>
-<%- include ../partials/footer.ejs %>
+<%- include ../Partials/footer.ejs%>
