--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -1,9 +1,8 @@
-<%- include partials/header.ejs %>
-<%- include partials/main_nav.ejs %>
-<div class = "container">
+<%- include Partials/header.ejs%>
+<%- include Partials/main_nav.ejs%>
+<div class="container">
     <h1><%= message %></h1>
     <h2><%= error.status %></h2>
     <pre><%= error.stack %></pre>
 </div>
-<%- include partials/bottom_nav.ejs %>
-<%- include partials/footer.ejs %>
+<%- include Partials/footer.ejs%>
