--- a/server/views/book/add.ejs
+++ b/server/views/book/add.ejs
@@ -7,24 +7,24 @@
             <h1><%= title %></h1>
             <form class="form" method="POST">
                 <div class="form-group">
-                    <label for="nameTextField">Book Title</label>
-                    <input type="text" class="form-control" id="nameTextField" placeholder="Enter the Book Title" name="Name" required>
+                    <label for="nameTextField">Assignment Title</label>
+                    <input type="text" class="form-control" id="nameTextField" placeholder="Enter the Assignment Title" name="Name" required>
                 </div>
                 <div class="form-group">
-                    <label for="authorTextField">Book Author</label>
-                    <input type="text" class="form-control" id="authorTextField" placeholder="Enter the Book Author" name="Author" required>
+                    <label for="authorTextField">Assignment Author</label>
+                    <input type="text" class="form-control" id="authorTextField" placeholder="Enter the Assignment Author" name="Author" required>
                 </div>
                 <div class="form-group">
                     <label for="publishedTextField">Published</label>
                     <input type="text" class="form-control" id="publishedTextField" placeholder="Enter the Published year" name="Published" required>
                 </div>
                 <div class="form-group">
-                    <label for="descriptionTextArea">Book Description</label>
-                    <textarea type="text" class="form-control" id="descriptionTextArea"  placeholder="enter the Book Description" name="Description" required></textarea>
+                    <label for="descriptionTextArea">Assignment Description</label>
+                    <textarea type="text" class="form-control" id="descriptionTextArea"  placeholder="enter the Assignment Description" name="Description" required></textarea>
                 </div>
                 <div class="form-group">
                     <label for="priceTextField">Price</label>
-                    <input type="text" class="form-control" id="priceTextField" placeholder="Book's Price" name="Price" required>
+                    <input type="text" class="form-control" id="priceTextField" placeholder="Assignment's Price" name="Price" required>
                 </div>
                 <button class="btn btn-primary" type="submit">Submit
                 <i class="fas fa-edit"></i></button>  
