--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -40,12 +40,12 @@
                 <i class="fa-solid fa-gears"></i> Service</a>
           </li>
           <li class="nav-item">
-            <% if(title=="Books") { %>
-              <a class="nav-link active" href="/bookslist">
+            <% if(title=="Assignments") { %>
+              <a class="nav-link active" href="/assignmentslist">
             <% } else {%>
-              <a class="nav-link" href="/bookslist">
+              <a class="nav-link" href="/assignmentslist">
             <% } %>  
-            <i class="fa-solid fa-book"></i> Books</a>
+            <i class="fa-solid fa-assignment"></i> Assignments</a>
           </li>
           <li class="nav-item"></li>
           <% if(title=="Contact Us") { %>
