--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -45,7 +45,7 @@
             <% } else {%>
               <a class="nav-link" href="/assignmentslist">
             <% } %>  
-            <i class="fa-solid fa-assignment"></i> Assignments</a>
+            <i class="fa-solid fa-book"></i> Assignments</a>
           </li>
           <li class="nav-item"></li>
           <% if(title=="Contact Us") { %>
