--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -55,6 +55,25 @@
           <% } %> 
           <i class="fa-solid fa-address-card"></i> ContactUs</a>
           </li>
+          <% if(typeof displayName=='string' && displayName) { %>
+            <li class="navbar-text">
+              <i class="fas fa-lg fa-user"></i>
+              Welcome, <%= displayName %>
+            </li>
+            <li class="nav-item">
+              <a href="/logout" class="nav-link">
+                <i class="fas fa-sign-out-alt"></i>
+                Logout
+              </a>
+            </li>
+          <% } else { %>
+            <li class="nav-item">
+              <a href="/login" class="nav-link">
+                <i class="fas fa-sign-in-alt"></i>
+                Sign In
+              </a>
+            </li>
+          <% } %>
         </ul>
       </div>
     </div>
