--- a/server/views/Assignment/add.ejs
+++ b/server/views/Assignment/add.ejs
@@ -1,39 +1,41 @@
 <%- include ../Partials/header.ejs%>
 <%- include ../Partials/main_nav.ejs%>
 <!--Content for Add Page-->
-<div class="container">
-    <div class="row">
-        <div class="offset-md-3 col-md-6">
-            <h1><%= title %></h1>
-            <form class="form" method="POST">
-                <div class="form-group">
-                    <label for="nameTextField">Assignment Title</label>
-                    <input type="text" class="form-control" id="nameTextField" placeholder="Enter the Assignment Title" name="Title" required>
-                </div>
-                <div class="form-group">
-                    <label for="dateTimeTextField">Assignment DateTime</label>
-                    <input type="DateTime-local" class="form-control" id="dateTimeTextField" placeholder="Enter the Assignment DateTime" name="DateTime" required>
-                </div>
-                <div class="form-group">
-                    <label for="locationTextField">Location</label>
-                    <input type="text" class="form-control" id="locationTextField" placeholder="Enter the Location year" name="Location" required>
-                </div>
-                <div class="form-group">
-                    <label for="descriptionTextArea">Assignment Description</label>
-                    <textarea type="text" class="form-control" id="descriptionTextArea"  placeholder="enter the Assignment Description" name="Description" required></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="userTextField">User</label>
-                    <input type="text" class="form-control" id="userTextField" placeholder="Assignment's User" name="User" required>
-                </div>
-                <button class="btn btn-primary" type="submit">Submit
-                <i class="fas fa-edit"></i></button>
-                <a href="/assignmentslist">
-                    <button class="btn btn-warning" type="button">Cancel
-                        <i class="fas fa-undo"></i>
-                    </button>    
-                </a>
-            </form>
+<div class="homeBody">
+    <div class="container">
+        <div class="row">
+            <div class="offset-md-3 col-md-6">
+                <h1><%= title %></h1>
+                <form class="form" method="POST">
+                    <div class="form-group">
+                        <label for="nameTextField">Assignment Title</label>
+                        <input type="text" class="form-control" id="nameTextField" placeholder="Enter the Assignment Title" name="Title" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="dateTimeTextField">Assignment DateTime</label>
+                        <input type="DateTime-local" class="form-control" id="dateTimeTextField" placeholder="Enter the Assignment DateTime" name="DateTime" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="locationTextField">Location</label>
+                        <input type="text" class="form-control" id="locationTextField" placeholder="Enter the Location year" name="Location" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="descriptionTextArea">Assignment Description</label>
+                        <textarea type="text" class="form-control" id="descriptionTextArea"  placeholder="enter the Assignment Description" name="Description" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="userTextField">User</label>
+                        <input type="text" class="form-control" id="userTextField" placeholder="Assignment's User" name="User" required>
+                    </div>
+                    <button class="btn btn-primary" type="submit">Submit
+                    <i class="fas fa-edit"></i></button>
+                    <a href="/assignmentslist">
+                        <button class="btn btn-warning" type="button">Cancel
+                            <i class="fas fa-undo"></i>
+                        </button>    
+                    </a>
+                </form>
+            </div>
         </div>
     </div>
 </div>
