--- a/server/views/Assignment/list.ejs
+++ b/server/views/Assignment/list.ejs
@@ -1,72 +1,74 @@
 <%- include ../Partials/header.ejs%>
 <%- include ../Partials/main_nav.ejs%>
 <!--Assignment Database-->
-<main class="container">
-    <div class="row">
-        <div class="offset-md-1 col-md-10">
-            <h1><%= title %></h1>
-            <br>
-            <% if(typeof displayName=='string' && displayName) { %>
-                <a href="/assignmentslist/add" class="btn btn-primary" role="button">
-                    <i class="fas fa-plus-circle"></i> Add Assignment
-                </a>
+<div class="homeBody">
+    <main class="container">
+        <div class="row">
+            <div class="offset-md-1 col-md-10">
+                <h1><%= title %></h1>
                 <br>
-            <% } %>
-            <table class="table table-bordered table-striped table-hover">
-                <tr class="d-flex">
-                    <% if(typeof displayName=='string' && displayName) { %>
-                        <th class="text-center col-2">Title</th>
-                        <th class="text-center col-2">DateTime</th>
-                        <th class="text-center col-1">Location</th>
-                        <th class="col-4">Description</th>
-                        <th class="text-center col-1">User</th>
-                        <th class="text-center col-1"></th>
-                        <th class="text-center col-1"></th>
-                    <% } else { %>
-                        <th class="text-center col-2">Title</th>
-                        <th class="text-center col-2">DateTime</th>
-                        <th class="text-center col-1">Location</th>
-                        <th class="col-6">Description</th>
-                        <th class="text-center col-1">User</th>
-                    <% } %>
-                </tr>
-                <% for(let count=0;count<AssignmentList.length;count++) { %>
-                <tr class="d-flex">
-                    <% if(typeof displayName=='string' && displayName) { %>
-                        <td class="text-center col-2"><%= AssignmentList[count].Title %></td>
-                        <td class="text-center col-2"><%= AssignmentList[count].DateTime %></td>
-                        <td class="text-center col-1"><%= AssignmentList[count].Location %></td>
-                        <td class="col-4"><%= AssignmentList[count].Description %> </td>
-                        <td class="text-center col-1"><%= AssignmentList[count].User %></td>
-                        <td class="text-center col-1">
-                            <a href="/assignmentslist/edit/<%= AssignmentList[count]._id%>"
-                                class="btn btn-primary btn-sm">
-                            <i class="fas fa-pencil-alt"></i>Edit
-                        </a>
-                        </td>
-                        <td class="text-center col-1">
-                            <a onclick="
-                                if (confirm('Do you want to delete <%= AssignmentList[count].Title%>?')){
-                                    return true;
-                                } else {
-                                return false;
-                                }"
-                                // button functionality from: https://stackoverflow.com/questions/9139075/how-to-show-a-confirm-message-before-delete?page=2&tab=scoredesc
-                            href="/assignmentslist/delete/<%= AssignmentList[count]._id%>" class="btn btn-danger btn-sm">
-                            <i class="fas fa-trash-alt"></i>Delete
-                        </a>
-                        </td>
-                    <% } else { %>
-                        <td class="text-center col-2"><%= AssignmentList[count].Title %></td>
-                        <td class="text-center col-2"><%= AssignmentList[count].DateTime %></td>
-                        <td class="text-center col-1"><%= AssignmentList[count].Location %></td>
-                        <td class="col-6"><%= AssignmentList[count].Description %> </td>
-                        <td class="text-center col-1"><%= AssignmentList[count].User %></td>
-                    <% } %>
-                </tr>    
-                    <%} %>
-            </table>
+                <% if(typeof displayName=='string' && displayName) { %>
+                    <a href="/assignmentslist/add" class="btn btn-primary" role="button">
+                        <i class="fas fa-plus-circle"></i> Add Assignment
+                    </a>
+                    <br>
+                <% } %>
+                <table class="table table-bordered table-striped table-hover">
+                    <tr class="d-flex">
+                        <% if(typeof displayName=='string' && displayName) { %>
+                            <th class="text-center col-2">Title</th>
+                            <th class="text-center col-2">DateTime</th>
+                            <th class="text-center col-1">Location</th>
+                            <th class="col-4">Description</th>
+                            <th class="text-center col-1">User</th>
+                            <th class="text-center col-1"></th>
+                            <th class="text-center col-1"></th>
+                        <% } else { %>
+                            <th class="text-center col-2">Title</th>
+                            <th class="text-center col-2">DateTime</th>
+                            <th class="text-center col-1">Location</th>
+                            <th class="col-6">Description</th>
+                            <th class="text-center col-1">User</th>
+                        <% } %>
+                    </tr>
+                    <% for(let count=0;count<AssignmentList.length;count++) { %>
+                    <tr class="d-flex">
+                        <% if(typeof displayName=='string' && displayName) { %>
+                            <td class="text-center col-2"><%= AssignmentList[count].Title %></td>
+                            <td class="text-center col-2"><%= AssignmentList[count].DateTime %></td>
+                            <td class="text-center col-1"><%= AssignmentList[count].Location %></td>
+                            <td class="col-4"><%= AssignmentList[count].Description %> </td>
+                            <td class="text-center col-1"><%= AssignmentList[count].User %></td>
+                            <td class="text-center col-1">
+                                <a href="/assignmentslist/edit/<%= AssignmentList[count]._id%>"
+                                    class="btn btn-primary btn-sm">
+                                <i class="fas fa-pencil-alt"></i>Edit
+                            </a>
+                            </td>
+                            <td class="text-center col-1">
+                                <a onclick="
+                                    if (confirm('Do you want to delete <%= AssignmentList[count].Title%>?')){
+                                        return true;
+                                    } else {
+                                    return false;
+                                    }"
+                                    // button functionality from: https://stackoverflow.com/questions/9139075/how-to-show-a-confirm-message-before-delete?page=2&tab=scoredesc
+                                href="/assignmentslist/delete/<%= AssignmentList[count]._id%>" class="btn btn-danger btn-sm">
+                                <i class="fas fa-trash-alt"></i>Delete
+                            </a>
+                            </td>
+                        <% } else { %>
+                            <td class="text-center col-2"><%= AssignmentList[count].Title %></td>
+                            <td class="text-center col-2"><%= AssignmentList[count].DateTime %></td>
+                            <td class="text-center col-1"><%= AssignmentList[count].Location %></td>
+                            <td class="col-6"><%= AssignmentList[count].Description %> </td>
+                            <td class="text-center col-1"><%= AssignmentList[count].User %></td>
+                        <% } %>
+                    </tr>    
+                        <%} %>
+                </table>
+            </div>
         </div>
-    </div>
-</main>
+    </main>
+</div>
 <%- include ../Partials/footer.ejs%>
