--- a/server/views/Auth/register.ejs
+++ b/server/views/Auth/register.ejs
@@ -1,40 +1,48 @@
 <%- include ../Partials/header.ejs %>
 <%- include ../Partials/main_nav.ejs %>
-<main class="container">
-	<!-- Message Area -->
-	<% if(message.length > 0){ %>
-		<div class="alert alert-danger">
-			<%= message %>
+<div class="homeBody">
+	<main class="container" style="padding-top: 60px">
+		<!-- Message Area -->
+		<% if(message.length > 0){ %>
+			<div class="alert alert-danger">
+				<%= message %>
+			</div>
+		<% } %>
+		<div class="row">
+			<div class="offset-md-4 col-md-4">
+				<h1>Please register</h1>
+				<form method="post" autocomplete="off">
+					<br>
+					<fieldset class="form-group">
+						<label for="username">Username:</label>
+						<input type="text" class="form-control" name="username" placeholder="Enter the username" id="username" required autofocus>
+					</fieldset>
+					<br>
+					<fieldset class="form-group">
+						<label for="password">Password:</label>
+						<input type="text" class="form-control" name="password" placeholder="Enter the password" id="password" required>
+					</fieldset>
+					<br>
+					<fieldset class="form-group">
+						<label for="email">Email:</label>
+						<input type="email" class="form-control" name="email" placeholder="Enter the email address" id="email" required>
+					</fieldset>
+					<br>
+					<fieldset class="form-group">
+						<label for="displayName">Display Name:</label>
+						<input type="text" class="form-control" name="displayName" placeholder="Enter the display name" id="displayName" required>
+					</fieldset>
+					<br>
+					<fieldset class="form-group d-flex justify-content-center">
+						<input type="submit" class="btn btn-success" value="Register">
+						&nbsp;&nbsp;&nbsp;
+						<a href="/">
+							<input type="button" class="btn btn-warning" value="Cancel">
+						</a>
+					</fieldset>
+				</form>
+			</div>
 		</div>
-	<% } %>
-	<div class="row">
-		<div class="offset-md-4 cold-md-4">
-			<h1>Please register</h1>
-			<form method="post" autocomplete="off">
-				<fieldset class="form-group">
-					<label for="username">Username:</label>
-					<input type="text" class="form-control" name="username" placeholder="Enter the username" id="username" required autofocus>
-				</fieldset>
-				<fieldset class="form-group">
-					<label for="password">Password:</label>
-					<input type="text" class="form-control" name="password" placeholder="Enter the password" id="password" required>
-				</fieldset>
-				<fieldset class="form-group">
-					<label for="email">Email:</label>
-					<input type="email" class="form-control" name="email" placeholder="Enter the email address" id="email" required>
-				</fieldset>
-				<fieldset class="form-group">
-					<label for="displayName"></label>
-					<input type="text" class="form-control" name="displayName" placeholder="Enter the display name" id="displayName" required>
-				</fieldset>
-				<fieldset class="form-group text-right">
-					<input type="submit" class="btn btn-success" value="Register">
-					<a href="/">
-						<input type="button" class="btn btn-warning" value="Cancel">
-					</a>
-				</fieldset>
-			</form>
-		</div>
-	</div>
-</main>
+	</main>
+</div>
 <%- include ../Partials/footer.ejs %>
