--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/Content/app.css' />
-    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css"/>
-    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/Script/app.js"></script>
+<head>
+  <title><%= title %></title>
+  <link rel='stylesheet' href='/Content/app.css' />
+  <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css"/>
+  <script src="/bootstrap/dist/js/bootstrap.min.js"></script> <!-- I used bootstrap -->
+  <script src="/Script/app.js"></script>
 
-  </head>
-  <body>
+</head>
+<body style="min-height: 100vh; min-width: 100vh;">
