--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -1,13 +1,24 @@
-<!--NavBar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">INFR3120 Project</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
+<!--Navbar-->
+<nav class="navbar NavBackground navbar-dark fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">INFR3120 Assignment 3
+    <% if(typeof displayName=='string' && displayName) { %>
+        &nbsp; &nbsp; 
+        <i class="fas fa-lg fa-user"></i>
+        Welcome, <%= displayName %>
+    <% } %>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Pages</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body NavBackground">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item fs-3 py-3">
             <% if(title=="Home") { %>
               <a class="nav-link active" href="/home">
             <% } else {%>
@@ -15,31 +26,7 @@
             <% } %>  
             <i class="fa-solid fa-house-chimney-user"></i> Home</a>
           </li>
-          <li class="nav-item">
-            <% if(title=="About us") { %>
-              <a class="nav-link active" href="/aboutus">
-            <% } else {%>
-              <a class="nav-link" href="/aboutus">  
-            <% } %>       
-              <i class="fa-solid fa-circle-info"></i> AboutUs</a>
-          </li>
-          <li class="nav-item">
-            <% if(title=="Products") { %>
-              <a class="nav-link active" href="/products">
-            <% } else {%>
-              <a class="nav-link" href="/products">
-            <% } %>    
-              <i class="fa-brands fa-elementor"></i> Products</a>
-          </li>
-          <li class="nav-item">
-            <% if(title=="Service") { %>
-              <a class="nav-link active" href="/service">
-            <% } else {%> 
-              <a class="nav-link" href="/service">
-            <% } %>  
-                <i class="fa-solid fa-gears"></i> Service</a>
-          </li>
-          <li class="nav-item">
+          <li class="nav-item fs-3 py-3">
             <% if(title=="Assignments") { %>
               <a class="nav-link active" href="/assignmentslist">
             <% } else {%>
@@ -47,27 +34,15 @@
             <% } %>  
             <i class="fa-solid fa-book"></i> Assignments</a>
           </li>
-          <li class="nav-item"></li>
-          <% if(title=="Contact Us") { %>
-            <a class="nav-link active" href="/contactus">
-          <% } else {%>  
-            <a class="nav-link" href="/contactus">
-          <% } %> 
-          <i class="fa-solid fa-address-card"></i> ContactUs</a>
-          </li>
           <% if(typeof displayName=='string' && displayName) { %>
-            <li class="navbar-text">
-              <i class="fas fa-lg fa-user"></i>
-              Welcome, <%= displayName %>
-            </li>
-            <li class="nav-item">
+            <li class="nav-item fs-3 py-3">
               <a href="/logout" class="nav-link">
                 <i class="fas fa-sign-out-alt"></i>
                 Logout
               </a>
             </li>
           <% } else { %>
-            <li class="nav-item">
+            <li class="nav-item fs-3 py-3">
               <a href="/login" class="nav-link">
                 <i class="fas fa-sign-in-alt"></i>
                 Sign In
@@ -77,4 +52,9 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
+
+
+
+ 
