--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -14,7 +14,7 @@
                 <p>Prepare to be blown away by the "seamless" routing protocols developed for your viewing pleasure</p>
                 <p>Rest assured that we have spared no expense to bring to you a safe easy to use program for all your assignment tracking needs</p>
                 <p>This website also supports the coolest of color schemes with our sleek terminal esk color palette</p>
-                <img src="">
+                <img src="/Assets/images/coverArt.png" alt="A great drawing demonstrating the apps usefulness">
             </div>
         </main>
     <% } else { %>
