--- a/server/views/Assignment/edit.ejs
+++ b/server/views/Assignment/edit.ejs
@@ -2,38 +2,46 @@
 <%- include ../Partials/main_nav.ejs%>
 <!--Content for the edit Operation-->
 <div class="homeBody">
-    <div class="container">
+    <div class="container" style="padding-top: 60px;">
         <div class="row">
             <div class="offset-md-3 col-md-6">
                 <h1><%= title %></h1>
                 <form class="form" method="POST">
                     <div class="form-group">
-                        <label for="titleTextField">Assignment Title</label>
+                        <label for="titleTextField">Title:</label>
                         <input type="text" class="form-control" id="titleTextField" placeholder="Enter the Assignment Title" name="Name" value="<%= Assignment.Title %>" required>
                     </div>
+                    <br>
                     <div class="form-group">
-                        <label for="dateTimeTextField">Assignment DateTime</label>
+                        <label for="dateTimeTextField">DateTime:</label>
                         <input type="DateTime-local" class="form-control" id="dateTimeTextField" placeholder="Enter the Assignment DateTime" name="DateTime" value="<%= Assignment.DateTime %>" required>
                     </div>
+                    <br>
                     <div class="form-group">
-                        <label for="locationTextField">Location</label>
+                        <label for="locationTextField">Location:</label>
                         <input type="text" class="form-control" id="locationTextField" placeholder="Enter the Location year" name="Location" value="<%= Assignment.Location %>" required>
                     </div>
+                    <br>
                     <div class="form-group">
-                        <label for="descriptionTextArea">Assignment Description</label>
+                        <label for="descriptionTextArea">Description:</label>
                         <textarea type="text" class="form-control" id="descriptionTextArea"  placeholder="enter the Assignment Description" name="Description" required><%= Assignment.Description %></textarea>
                     </div>
+                    <br>
                     <div class="form-group">
-                        <label for="userTextField">User</label>
+                        <label for="userTextField">User:</label>
                         <input type="text" class="form-control" id="userTextField" placeholder="Assignment's User" name="User" value="<%= Assignment.User %>" required>
                     </div>
-                    <button class="btn btn-primary" type="submit">Submit
-                    <i class="fas fa-edit"></i></button>
-                    <a href="/assignmentslist">
-                        <button class="btn btn-warning" type="button">Cancel
-                            <i class="fas fa-undo"></i>
-                        </button>
-                    </a>    
+                    <br>
+                    <div class="form-group d-flex justify-content-center">
+                        <button class="btn btn-primary" type="submit">Submit
+                        <i class="fas fa-edit"></i></button>
+                        &nbsp;&nbsp;&nbsp;
+                        <a href="/assignmentslist">
+                            <button class="btn btn-warning" type="button">Cancel
+                                <i class="fas fa-undo"></i>
+                            </button>
+                        </a>  
+                    </div>  
                 </form>
             </div>
         </div>
