--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<nav class="navbar NavBackground navbar-dark fixed-top">
+<nav class="navbar navBackground navbar-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">INFR3120 Assignment 3
     <% if(typeof displayName=='string' && displayName) { %>
@@ -16,7 +16,7 @@
         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Pages</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
-      <div class="offcanvas-body NavBackground">
+      <div class="offcanvas-body navBackground">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item fs-3 py-3">
             <% if(title=="Home") { %>
