--- a/server/views/Auth/register.ejs
+++ b/server/views/Auth/register.ejs
@@ -11,7 +11,7 @@
 		<div class="row">
 			<div class="offset-md-4 col-md-4">
 				<h1>Please register</h1>
-				<form method="post" autocomplete="off">
+				<form method="post" autocomplete="off"> <!--create registration form-->
 					<br>
 					<fieldset class="form-group">
 						<label for="username">Username:</label>
@@ -34,10 +34,10 @@
 					</fieldset>
 					<br>
 					<fieldset class="form-group d-flex justify-content-center">
-						<input type="submit" class="btn btn-success" value="Register">
+						<input type="submit" class="btn btn-success" value="Register"> <!--register(submit) button-->
 						&nbsp;&nbsp;&nbsp;
 						<a href="/">
-							<input type="button" class="btn btn-warning" value="Cancel">
+							<input type="button" class="btn btn-warning" value="Cancel"> <!--Cancel button-->
 						</a>
 					</fieldset>
 				</form>
