--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html> <!-- I used bootstrap -->
 <head>
   <title><%= title %></title>
-  <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css"/>
-  <link rel='stylesheet' href='/Content/app.css' />
-  <script src="/bootstrap/dist/js/bootstrap.min.js"></script> <!-- I used bootstrap -->
-  <script src="/Script/app.js"></script>
+  <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css"/> <!--bootstrap css-->
+  <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css"/> <!--font awesome icons-->
+  <link rel='stylesheet' href='/Content/app.css' /> <!--custom css file-->
+  <script src="/bootstrap/dist/js/bootstrap.min.js"></script> <!--bootstrap scripts-->
+  <script src="/Content/Script/app.js"></script> <!--custom scripts (unused)-->
 
 </head>
-<body style="min-height: 100vh; min-width: 100vh;">
+<body style="min-height: 100vh; min-width: 100vh;"> <!--body tag :) -->
