--- a/server/views/Assignment/edit.ejs
+++ b/server/views/Assignment/edit.ejs
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="offset-md-3 col-md-6">
                 <h1><%= title %></h1>
-                <form class="form" method="POST">
+                <form class="form" method="POST"><!--Create form for editing content and assign current value to each input field-->
                     <div class="form-group">
                         <label for="titleTextField">Title:</label>
                         <input type="text" class="form-control" id="titleTextField" placeholder="Enter the Assignment Title" name="Name" value="<%= Assignment.Title %>" required>
@@ -33,11 +33,11 @@
                     </div>
                     <br>
                     <div class="form-group d-flex justify-content-center">
-                        <button class="btn btn-primary" type="submit">Submit
+                        <button class="btn btn-primary" type="submit">Submit <!--Submit button-->
                         <i class="fas fa-edit"></i></button>
                         &nbsp;&nbsp;&nbsp;
                         <a href="/assignmentslist">
-                            <button class="btn btn-warning" type="button">Cancel
+                            <button class="btn btn-warning" type="button">Cancel <!--Cancel button-->
                                 <i class="fas fa-undo"></i>
                             </button>
                         </a>  
