--- a/server/views/Assignment/list.ejs
+++ b/server/views/Assignment/list.ejs
@@ -7,6 +7,7 @@
             <div class="offset-md-1 col-md-10">
                 <h1><%= title %></h1>
                 <br>
+                <!--Display add button only if the user is authenticated-->
                 <% if(typeof displayName=='string' && displayName) { %>
                     <div class="d-flex justify-content-center">
                         <a href="/assignmentslist/add" class="btn btn-primary" role="button">
@@ -17,6 +18,7 @@
                 <% } %>
                 <table class="table table-striped table-hover">
                     <tr class="d-flex">
+                    <!--Change table layout depending on if the user is authenticated-->
                         <% if(typeof displayName=='string' && displayName) { %>
                             <th class="text-center col-2" id="tableBackground">Title</th>
                             <th class="text-center col-2" id="tableBackground">DateTime</th>
@@ -33,8 +35,10 @@
                             <th class="text-center col-1" id="tableBackground">User</th>
                         <% } %>
                     </tr>
+                    <!--iterate through the assignmentslist sorted by date and print values into table-->
                     <% for(let count=0;count<AssignmentList.length;count++) { %>
                     <tr class="d-flex">
+                    <!--only display edit/delete buttons for authenticated users-->
                         <% if(typeof displayName=='string' && displayName) { %>
                             <td class="text-center col-2 text-wrap" id="tableBackground"><%= AssignmentList[count].Title %></td>
                             <td class="text-center col-2 text-wrap" id="tableBackground"><%= AssignmentList[count].DateTime %></td>
