--- a/server/views/Auth/login.ejs
+++ b/server/views/Auth/login.ejs
@@ -11,7 +11,7 @@
 		<div class="row">
 			<div class="offset-md-4 col-md-4">
 				<h1>Please login</h1>
-				<form method="post" autocomplete="off">
+				<form method="post" autocomplete="off"> <!--Create login form-->
 					<br>
 					<fieldset class="form-group">
 						<label for="username">Username:</label>
@@ -24,14 +24,14 @@
 						<br>
 						or:
 						<br>
-						<a href="/register" class="btn btn-primary">Register Here</a>
+						<a href="/register" class="btn btn-primary">Register Here</a> <!--register button-->
 					</fieldset>
 					<br>
 					<fieldset class="form-group d-flex justify-content-center">
-						<input type="submit" class="btn btn-success" value="Login">
+						<input type="submit" class="btn btn-success" value="Login"> <!--login button-->
 						&nbsp;&nbsp;&nbsp;
 						<a href="/">
-							<input type="button" class="btn btn-warning" value="Cancel">
+							<input type="button" class="btn btn-warning" value="Cancel"> <!--cancel button-->
 						</a>
 					</fieldset>
 				</form>
