--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css"/> <!--font awesome icons-->
   <link rel='stylesheet' href='/Content/app.css' /> <!--custom css file-->
   <script src="/bootstrap/dist/js/bootstrap.min.js"></script> <!--bootstrap scripts-->
-  <script src="/Content/Script/app.js"></script> <!--custom scripts (unused)-->
+  <script src="/Script/app.js"></script> <!--custom scripts (unused)-->
 
 </head>
 <body style="min-height: 100vh; min-width: 100vh;"> <!--body tag :) -->
