--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -1,5 +1,5 @@
-<%- include('/partials/header.ejs')%>
-<%- include('/partials/main_nav.ejs')%>
+<%- include('partials/header.ejs')%>
+<%- include('partials/main_nav.ejs')%>
 <div class="container" style="padding-top: 60px;">
     <h1><%= message %></h1>
     <h2><%= error.status %></h2>
